# BulletHell

./: CMakeLists.txt  README.md
include/: audio.h  bullet.h  bullet_player.h  config.h  game_manager.h  player.h
include/bullet/: bullet.h  bullet_player.h
include/enemy/: enemy.h
include/player/: player.h  player_shoot.h
src/: audio.c  bullet.c  bullet_player.c  game_manager.c  main.c  player.c
src/bullet/: bullet.c  bullet_player.c
src/enemy/: enemy.c
src/player/: player.c  player_shoot.c
